--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Test",
   "description": "Test",
   "version": "0.0.0",
-  "main": "bot.js",  Jardin-d-hiver-Bot
+  "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
